--- a/neuralnetworks/tex/logbook.tex
+++ b/neuralnetworks/tex/logbook.tex
@@ -80,7 +80,7 @@ You have been warned.
 
 First off I must get this out of the way: I am frustrated with NeuralWorks.  
 
-I am puzzled what it is the goal of NeuralWorks truly was as intended by its makers, as none of the possible roles of software I can imagine is it even remotely suited to filling.  It is dense and full of an cryptic labyrinth of menus and fields and dialog boxes, so it can't be intended as an educational tool.  It is clumsy to actually accomplish a task as each act requires multiple navigations, and bulk tasks like running fifteen trials and comparing them each require multiple mechanical steps and external computation and graphing to process the information, so it can't be intended as an actual productive tool that humans are supposed to use.  At the same time, there is no way to use NW as a component in other toolchains, from other programming languages for instance, without manually doing the steps yourself to process the inputs and obtain the outputs (I found the User-Defined Input and Output feature it offers, but this is only to build functions that can be run from \emph{within} NW, you still have to navigate through the menus and interact with the GUI frontend to get any work done.  Also, you must operate within NW's traditional initialization and training cycle, performing functions though callbacks that are called only at certain times under certain conditions.  There is no way to use any NW functionality from a program external to NW, which is what would actually be useful).  There is no way to automate tasks programmatically or access functionality thanks to its closed source proprietary nature, and the manual labor of getting results is laborious, so it can't be intended as a programming tool that could be used in conjunction with other computational environments except in the most superficial sense.  Also, it does not appear to have been updated since 2001 (a whole decade!) and the owners are still charging comparable rates to a time when they were actually working on it.  In the meantime many things have happened in ten years, and there are open source tools freely available which are libraries that can be included in other projects, that are readable and editable by anyone (and therefore open to academic inquiry and useful for education), and have thriving contributor bases from all over the world and are being actively maintained (FANN comes to mind, but there are others).  I am baffled as to how NW can be considered a legitimate platform for anything beyond tinkering and experimentation, and am equally baffled as to why using NW is considered an engineering endeavor.  
+There is obviously a lot of effort that went into designing and implementing the various neural network algorithms, but I am puzzled what it is the goal of NeuralWorks truly was as intended by its makers, as none of the possible roles of software I can imagine is it even remotely suited to filling.  It is dense and full of a cryptic labyrinth of menus and fields and dialog boxes, so it can't be intended as an educational tool.  It is clumsy to actually accomplish a task as each act requires multiple navigations, and bulk tasks like running fifteen trials and comparing them each require multiple mechanical steps and external computation and graphing to process the information, so it can't be intended as an actual productive tool that humans are supposed to use.  At the same time, there is no way to use NW as a component in other toolchains, from other programming languages for instance, without manually doing the steps yourself to process the inputs and obtain the outputs (I found the User-Defined Input and Output feature it offers, but this is only to build functions that can be run from \emph{within} NW, you still have to navigate through the menus and interact with the GUI frontend to get any work done.  Also, you must operate within NW's traditional initialization and training cycle, performing functions though callbacks that are called only at certain times under certain conditions.  There is no way to use any NW functionality from a program external to NW, which is what would actually be useful).  There is no way to automate tasks programmatically or access functionality thanks to its closed source proprietary nature, and the manual labor of getting results is laborious, so it can't be intended as a programming tool that could be used in conjunction with other computational environments except in the most superficial sense.  Also, it does not appear to have been updated since 2001 (a whole decade!) and the owners are still charging comparable rates to a time when they were actually working on it.  In the meantime many things have happened in ten years, and there are open source tools freely available which are libraries that can be included in other projects, that are readable and editable by anyone (and therefore open to academic inquiry and useful for education), and have thriving contributor bases from all over the world and are being actively maintained (FANN comes to mind, but there are others).  I am baffled as to how NW can be considered a legitimate platform for anything beyond tinkering and experimentation, and am equally baffled as to why using NW is considered an engineering endeavor.  
 
 I am also frustrated that I asked to be able to develop my own algorithm for the LVQ, which would have been far more instructive and useful than merely creating something through InstaNet, and was refused.  Using NW is painful and not conducive to learning or productively conducting research.  I feel that the inability to programmatically conduct research and compose functionality in novel ways is a huge obstacle to obtaining results, and renders what could be an enjoyable endeavor into a task of suffering and exasperation.  
 
@@ -104,7 +104,13 @@ This leads to a consideration of what experiments to run.  Do I want to just acc
 
 \subsection{Running Experiments}
 
+After running the first set of experiments, there is no qualitative difference between using more or less competitive PE's in the Kohonen layer.  I want to compare the weights before training and after training to see how the weights for the various features adapted to the inputs.  If there is a correlation between certain features and the correct classification it should show up in the weights from the inputs to the competitive layer.
 
+As expected, the relationship between the features and the classifications was encoded in the weights!  After subtracting the weight vectors before training from the weight vectors after training five features were revealed to have been positively shifted.  This is fortuitous.  Now I must verify that these five vectors are really the critical set.  A good way to do this would be to make a training one with these five, then make a training run with a selection of five random features and compare the performance.  If this really is the critical set then it should far outperform the set selected randomly.  
+
+Sure enough, the revealed set of five features trains to over 91\%!  The randomly selected set does not even reach 80\%.  Possibly the architecture of the LVQ made this relationship more obvious.  
+
+Now the task is simply to generate graphs and make screenshots.
 
 \subsection{Reflections}
 
