finished final paper

--- a/artificiallife/finalreport.bib
+++ b/artificiallife/finalreport.bib
@@ -6,6 +6,14 @@ address = "Boca Raton, FL",
 year = 2007
 }
 
+@book{Ho,    
+author = "Mae-Wan Ho",
+title = "The Rainbow and the Worm",
+publisher = "World Scientific Publishing Company",
+year = 1998                  
+}
+
+
 @book{Buzsaki,
 author = "Gyorgy Buzsaki",
 title = "Rhythms of the Brain",
