--- a/systemsapproach/final.tex
+++ b/systemsapproach/final.tex
@@ -2,7 +2,7 @@
 \author{Ryan Spangler}
 \date{\today}
 
-\documentclass[10pt]{article}
+\documentclass[11pt]{article}
 
 \usepackage{commath}
 \usepackage{graphicx}
@@ -23,15 +23,51 @@
 \begin{document}
 \maketitle
 
-Each individual perspective is crucial, but it is no one perspective that is the truth.  Somewhere, after all perspectives have been heard and gathered, they are examined as a whole, and a broader perspective that takes each into account is forged from the synthesis of these individual ones. 
+\section{Introduction}
 
-There is a dynamic in a collective that is not present in the individuals.  When working as a team, if the individuals reach a point where they are predicting and supporting what one another will do, a tensegrity is formed that behaves as if there is a single collective action at work.
+This document is a guide to approaching and improving systems, wherever they may live.  A system is anything that is generated from the interactions between things, as opposed to those things in and of themselves (ranging from molecules to nations to the biosphere and beyond).  This may be a system you are personally responsible for, but just as easily it could be a system that you have happened upon.  Perhaps it has not yet even been clearly defined as a system with all contributing components identified and their interactions puzzled out, but you see nonetheless an agency at work whose nature, though not immediately obvious, reveals some essential complexity.  Many times this will appear in the form of \emph{symptoms}.  Symptoms take the form of immediate pain so are usually addressed in an immediate manner.  This can be misleading when the symptoms are relieved but the essential problem remains.  Usually the symptoms, their root cause never really reckoned with, return with a ferocity that requires even more of the original ``solution'', if they can be dealt with at all.  Despite some knowledge of this dynamic, it still occurs alarmingly often, on every scale to much destruction and suffering.  Why is this?  
 
-shared vision
-team learning 
-mental models
-personal mastery
+It turns out that these kind of problems are often caused by \emph{interactions} between things, rather than the things in and of themselves.  By unconsciously restricting our awareness to \emph{things} we miss out on the processes in which these things are embedded and merely parts in a whole, and thereby miss out on the ultimate causes that give rise to the symptoms we fight so unsuccessfully.
 
+So how do we orient ourselves to whatever situation we are trying to address in a way that will allow us to solve the essential problem rather than battle the symptoms?  That is what this document is about.
+
+\section{Awareness}
+
+The first step, long before any action is taken, is that the situation must be understood as it lies.  This requires, even before that can start, a general awareness of your own mind being aware of itself.  Your mind will play an essential role in the discovery of the structure of your system, and too often the observer/actor unintentionally removes themselves from their conceptual model of the system and the world in general, to disastrous consequences.  If you have not delved into your own hidden assumptions and questioned critically all of your dearly held beliefs, now is the time.  Hidden assumptions and undetected preconceptions can only cripple your ability to directly apprehend the nature of the system you are trying to understand.  Uproot them now, ruthlessly.  They have no place here.  Replace them with openness and the serene absence of judgment.  This may take some years, so return to this document once you feel comfortable you will not damage the system in your blindness and hubris.
+
+Once that is accomplished, you must gather all the information you can about the system.  Study it, watch it.  Measure it.  Take notes on everything.  If your system involves people, talk to everyone, find out their roles and who they talk to and what they do for whom when.  This is where your lifelong discipline of cultivating openness will come to great use.  Find out everything.  Don't worry too much about organizing or categorizing everything right away (except to expediate retrieval).  In this stage you are free of judgment.  What is here?  What is at work?  This is where you gather the materials that you will forge a vision of the system from.
+
+\section{Grouping}
+
+Next, draw common elements together.  If you have approached the awareness phase receptive and unassuming you will already start to be forming impressions now.  Witness these structures take shape in your mind rather than forcing them into preestablished frameworks. 
+
+Experiment with granularities and groupings.  Some things naturally unite, while others form a spectrum or messy tangles.  There are countless specific techniques for this.  Take two elements: how are they related?  Make lists and connect them with lines.  Choose a quality and five or so different kinds of that quality (so if color is the quality, red/blue/green/white/black could be a way to partition that quality), then organize everything into those groupings.  Make a tree with ``whole system'' at the top, subdividing it on every level, then subdividing those divisions until you get to the lowest level you have information for.  Do this in reverse, laying everything out and drawing nested circles until you finally encircle all of the circles within circles in one giant circle, the \emph{whole}.  Make a map of interactions, with elements as circles and every interaction as a line between them.  
+
+The idea is that here you play with all of your information.  Don't close yourself off to approaches, instead try as many as possible.  Look at your data in as many different ways as you can possibly come up with.  Throw darts at it.  Toss it like frisbees.  Make a cape out of it.  Roll around in it until you are so thoroughly drenched with it people can actually smell it on you.  Own it.
+
+\section{Pruning}
+
+At some point, when things feel thoroughly ripe, take your large flowering organismic mass and cut everything away.  Leave behind only the pure channels that define the system's true essence.  Your remaining elements should be simple, clear, and disjoint from other elements.  Leave the connections that really matter.
+
+\section{Modeling}
+
+From the pieces you have pruned, build a model.  Use whatever techniques you have at your disposal.  Use many.
+
+My personal approach is to make a causal loop diagram where I connect each surviving element with every other that it has a direct influence on, and label it positive or negative.  I then identify feedback loops as the crucial components of the system structure, and add back in enough things that got pruned out before to fill out the picture.  Then I will turn to more mathematical or computational approaches, but by that time I have a pretty good idea of what I am doing.  However, this is not gospel.  
+
+The key here is that not only must you build a model, but you also have to build a mapping of your model onto the world and vice versa.  If you do something in the model (break some link, strenghten some loop -- the nature of the model dictates the operations you can perform on it), the effects should mirror what happens in the real world when you perform a corresponding action given by this mapping.  This is difficult, as there are many ways to build a model that will resemble it under certain conditions, but fail to capture the essential dynamic of the system.  The usefulness of your model lies in how generally you can apply it to situations in your problem domain, and how flexible and consistent it is in replicating the behavior of your real world system.   
+
+When modeling, you do everything you can to your model to break it.  You will, many times.  Be ruthless.  Each time from its ashes will emerge something stronger, something more capable, more streamlined, more flexible and useful.  Grow your model until it performs under a variety of conditions, and you know it and its behavior inside and out.  Nothing will come of a model you have only a passing intimacy with.  Hold nothing back.
+
+\section{Levering}
+
+Here, finally, you act.  Now that you have a useful model of the system, what do you want to change about it?  Find a way to change the model that way, then replicate those changes in the real world according to the mapping you forged in the modeling phase.  Adapt the model as you go, change the way you are interacting with the world according to those new changes in the model, change the model based on new results from the world, make changes in the world based on those... and you are rolling.  The ultimate goal is to bring the system to a place where it takes care of itself, then you can humbly step away and resume your journey until you find another system which is worthy of aligning with itself.  
+
+\section{Tying Together}
+
+Eventually you will see that everything is part of a large interwoven system of systems, of which we have just been focusing on isolated subsystems.  To cycle back to awareness, the more systems we are aware of the more we see connections between them and see not only the endless detail but the larger patterns as well.  We must bring awareness of all systems into the consideration whenever we address a single system, because it is essentially a part of and affects all of existence in some way.  
+
+Go forth!  Interact!  Make the world a healthier, more coherent place.
 
 \end{document}  
 
