--- a/systemsapproach/final.tex
+++ b/systemsapproach/final.tex
@@ -61,7 +61,9 @@ When modeling, you do everything you can to your model to break it.  You will, m
 
 \section{Levering}
 
-Here, finally, you act.  Now that you have a useful model of the system, what do you want to change about it?  Find a way to change the model that way, then replicate those changes in the real world according to the mapping you forged in the modeling phase.  Adapt the model as you go, change the way you are interacting with the world according to those new changes in the model, change the model based on new results from the world, make changes in the world based on those... and you are rolling.  The ultimate goal is to bring the system to a place where it takes care of itself, then you can humbly step away and resume your journey until you find another system which is worthy of aligning with itself.  
+Here, finally, you act.  Now that you have a useful model of the system, what do you want to change about it?  The key will be to identify points of leverage that maximize effort.  Before the model is created, much effort could be expended towards a task that would have no ultimate effect on the behavior of the system.  Now that you have the model, examine it for points of leverage: small changes which produce large and significant effects.
+
+Find a way to change the model in the way you desire, then replicate those changes in the real world according to the mapping you forged in the modeling phase.  Adapt the model as you go, change the way you are interacting with the world according to those new changes in the model, change the model based on new results from the world, make changes in the world based on those... and you are rolling.  The ultimate goal is to bring the system to a place where it takes care of itself, then you can humbly step away and resume your journey until you find another system which is worthy of aligning with itself.  
 
 \section{Tying Together}
 
